--- a/config.toml
+++ b/config.toml
@@ -3,3 +3,4 @@ languageCode = "en-us"
 title = "StashSite"
 theme="ananke"
 publishDir = "docs"
+baseURL = "https://michaelrstadler.github.io/website/"
